[package]
name = "sokoban"
version = "0.1.0"
authors = ["Eduardo Nunes Pereira <eduardonunesp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17", features = ["mint"]}
ggez = "0.5"
rand = "0.7.3"